# jurisar

./: .gitignore  Core.md  README.md
backend/: __init__.py  main.py  requirements.txt
backend/api/routes/: embeddings.py  etiquetas.py  fallos.py  search.py
backend/core/: database.py  models.py  schemas.py
backend/core/services/: embedding_service.py  ia_service.py  search_service.py
backend/scrapers/: jujuy_scraper.py
backend_2/: README.md  ejemplo_uso.py  hello.py  main.py  procesar_fallo.py  pyproject.toml  requirements.txt  test_haiku_fallo.py
backend_2/api/routes/: fallo.py  fallos.py
backend_2/core/: prompts.py  utils.py
backend_2/core/services/: ia_service.py
