[project]
name = "backend-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.18.1",
    "fastapi==0.109.0",
    "pdfplumber>=0.11.9",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests>=2.32.5",
    "uvicorn[standard]==0.27.0",
]
